--- a/commands.html
+++ b/commands.html
@@ -6,6 +6,7 @@
     <title>Abone-Rol Sistemi Bot - a Discord Bot</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" href="./assets/img/logo.png" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
     
@@ -63,7 +64,7 @@
       <div class="navbar-brand mt-2 mb-2">
         <a href="index.html">
         <img
-        src="https://cdn.discordapp.com/attachments/1173319481599213639/1218093265815863426/Ekran_goruntusu_2024-03-15_095746.png?ex=6637d901&is=66368781&hm=f0d507afaa2679508c71ba84ba4e7aeaec1e4f6cf4a319d647a58ec02a38799a&"
+        src="./assets/img/logo.png"
         width="60px"
         style="margin-left: 10px; border-radius: 50%;"
       />
@@ -92,7 +93,7 @@
             Anasayfa
           </a>
 
-          <a href="commands.html" class="navbar-item is-tab">
+          <a href="commands.html" class="active navbar-item is-tab">
             Komutlar
           </a>
 
