--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Abone-Rol Sistemi Bot - a Discord Bot</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
+    <link rel="icon" href="./assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
@@ -21,7 +22,7 @@
   </head>
   <body>
     <!-- Back To Top Start -->
-    <a id="backtotop" data-tippy-content="Back To Top.">
+    <a id="backtotop" data-tippy-content="Yukarı çık.">
       <i class="fa-solid fa-angle-up has-text-white fa-2xl mt-5"></i>
     </a>
     <!-- Back To Top End -->
@@ -35,7 +36,7 @@
       <div class="navbar-brand mt-2 mb-2">
         <a href="index.html">
           <img
-          src="https://cdn.discordapp.com/attachments/1173319481599213639/1218093265815863426/Ekran_goruntusu_2024-03-15_095746.png?ex=6637d901&is=66368781&hm=f0d507afaa2679508c71ba84ba4e7aeaec1e4f6cf4a319d647a58ec02a38799a&"
+          src="./assets/img/logo.png"
           width="60px"
           style="margin-left: 10px; border-radius: 50%;"
         />
@@ -66,7 +67,7 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a href="index.html" class="navbar-item is-tab">
+          <a href="index.html" class="active navbar-item is-tab">
             Anasayfa
           </a>
 
@@ -132,7 +133,7 @@
             <div class="column mt-6" data-aos="fade-left">
               <img
                 class="image has-image-centered vert-move mt-4"
-                src="https://cdn.discordapp.com/attachments/1173319481599213639/1218093265815863426/Ekran_goruntusu_2024-03-15_095746.png?ex=6637d901&is=66368781&hm=f0d507afaa2679508c71ba84ba4e7aeaec1e4f6cf4a319d647a58ec02a38799a&"
+                src="./assets/img/logo.png"
                 alt="hero image"
                 style="width: 20rem; border-radius: 50%;"
               />
@@ -140,7 +141,7 @@
           </div>
         </div>
       </div>
-      <div class="has-text-centered" data-tippy-content="Scroll Down">
+      <div class="has-text-centered" data-tippy-content="Aşağa in">
         <a href="#features"
           ><i
             class="fa-solid fa-circle-chevron-down fa-lg vert-move2 has-text-white"
@@ -296,6 +297,7 @@
 
         <p>
           <span class="has-text-weight-bold">Abone-Rol Sistemi</span>
+        </p>
           <br />
           &copy; <span id="cp-year"></span> Copyright parsher. Tüm hakları gizlidir.
         </p>
