--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             Anasayfa
           </a>
 
-          <a href="commands.html" class="navbar-item is-tab">
+          <a href="/commands" class="navbar-item is-tab">
             komutlar
           </a>
 
-          <a href="istatistikler.html" class="navbar-item is-tab">
+          <a href="/istatistikler" class="navbar-item is-tab">
             İstatistikler
           </a>
 
