--- a/komutlar/commands.html
+++ b/komutlar/commands.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Abone-Rol Sistemi Bot - a Discord Bot</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
-    <link rel="icon" href="./assets/img/logo.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" href="./assets/img/logo.png" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
     
@@ -93,11 +93,11 @@
             Anasayfa
           </a>
 
-          <a href="commands.html" class="navbar-item is-tab">
+          <a href="/commands" class="active navbar-item is-tab">
             Komutlar
           </a>
 
-          <a href="istatistikler.html" class="active navbar-item is-tab">
+          <a href="/istatistikler" class="navbar-item is-tab">
             İstatistikler
           </a>
 
@@ -113,7 +113,7 @@
               <a href="https://discord.gg/EM4GrB6Hg2" class="button is-blurple">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
-                  Destek Sunucusu</strong
+                  Destek sunucusu</strong
                 >
               </a>
               <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.commands" class="button is-blurple">
@@ -130,33 +130,38 @@
     <!-- Navbar End -->
 
 
-
-
-    <!-- Stats Section Start -->
-    <section id="stats" class="section mt-6">
+    <!-- Features Section Start -->
+    <section id="features" class="section mt-6">
       <div class="has-text-centered">
-        <h1 class="title lined">İstatistikler</h1>
+        <h1 class="title lined">Komutlar</h1>
         <div class="line line-center blurple"></div>
       </div>
 
-      <div class="columns mt-6">
-        <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">1100+</p>
-          <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-server"></i> Sunucuda</span>
-        </div>
+      <!-- single feature start (Left) -->
+      <div>
+        <div>
+          <div>
+            <h4 class="title">Botumuzun <span class="blurple">Genel</span> Komutları</h4>
+            <p class="padding-give-bottom"><span class="command">/yardım </span>・ Botun komutları ve ne işe yaradıklarını gösterir.</p>
+            <p class="padding-give-bottom"><span class="command">/davet</span>・ Botu davet edersiniz ve destek sunucusuna katılabilirsiniz.</p>
+            <p class="padding-give-bottom"><span class="command">/leaderboard </span>・ Liderlik tablosunu gösterir.</p>
+            <p class="padding-give-bottom"><span class="command">/oyver</span>・ Botun top.gg uzantısını gösterir..</p>
+            <p class="padding-give-bottom"><span class="command">/destek</span>・ Botun destek sunucusunu gösterir.</p>
+            <p class="padding-give-bottom"><span class="command">/istatistik</span>・ Botun istatistiklerini gösterir.</p>
+            <h4 class="title">Botumuzun <span class="blurple">Yetkili</span> Komutları</h4>
+            <p class="padding-give-bottom"><span class="command">/bilgi </span>・ yetkilinin rol sayısını gösterir.</p>
+            <p class="padding-give-bottom"><span class="command">/abone rol-ayarla</span>・ abone rolü ayarlar.</p>
+            <p class="padding-give-bottom"><span class="command">/abone yetkili-rol-ayarla</span>・ yetkili rolü ayarlar.</p>
+            <p class="padding-give-bottom"><span class="command">/abone log-ayarla</span>・ sistem mesaj kanalı ayarlar.</p>
+            <p class="padding-give-bottom"><span class="command">/abone ver</span>・ kullanıcıya abone rolü verir.</p>
+            <p class="padding-give-bottom"><span class="command">/abone al</span>・ kullancının abone rolünü alır.</p>
+            <p class="padding-give-bottom"><span class="command">/abone veri-sıfırla</span>・ sunucunuzdaki tüm verileri siler.</p>
+            <p class="padding-give-bottom"><span class="command">/abone ayarlar</span>・ sunucu ayar verilerini gösterir.</p>
 
-        <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">17</p>
-          <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-terminal"></i> Komut</span>
-        </div>
-
-        <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">1M+</p>
-          <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-users"></i> Kullanıcı</span>
+          </div>
         </div>
       </div>
-    </section>
-    <!-- Stats Section End -->
+      <!-- single feature end (Left) -->
 
   
     </section>
