--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             Anasayfa
           </a>
 
-          <a href="/commands" class="navbar-item is-tab">
+          <a href="/komutlar" class="navbar-item is-tab">
             komutlar
           </a>
 
