--- a/istatistikler/index.html
+++ b/istatistikler/index.html
@@ -62,14 +62,14 @@
       aria-label="main navigation"
     >
       <div class="navbar-brand mt-2 mb-2">
-        <a href="index.html">
+        <a href="/home">
         <img
         src="./assets/img/logo.png"
         width="60px"
         style="margin-left: 10px; border-radius: 50%;"
       />
     </a>
-        <a class="navbar-item" href="index.html">
+        <a class="navbar-item" href="/home">
           <strong>Abone-Rol Sistemi Bot</strong>
 
           <!-- or if you want to use image -->
@@ -89,11 +89,11 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a href="index.html" class="navbar-item is-tab">
+          <a href="/home" class="navbar-item is-tab">
             Anasayfa
           </a>
 
-          <a href="/commands" class="navbar-item is-tab">
+          <a href="/komutlar" class="navbar-item is-tab">
             Komutlar
           </a>
 
@@ -116,7 +116,7 @@
                   Destek Sunucusu</strong
                 >
               </a>
-              <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.commands" class="button is-blurple">
+              <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.komutlar" class="button is-blurple">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
                   Botu Davet Et</strong
@@ -169,7 +169,7 @@
           <p class="title has-text-weight-bold">
             <span class="blurple">Abone-Rol Sistem</span> botumuzu bu gün dene!
           </p>
-          <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.commands" class="button is-blurple is-medium"
+          <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.komutlar" class="button is-blurple is-medium"
             ><strong><i class="fa-solid fa-book"></i> Botu ekle</strong></a
           >
         </div>
