--- a/komutlar/index.html
+++ b/komutlar/index.html
@@ -62,14 +62,14 @@
       aria-label="main navigation"
     >
       <div class="navbar-brand mt-2 mb-2">
-        <a href="/home">
+        <a href="/">
         <img
         src="./assets/img/logo.png"
         width="60px"
         style="margin-left: 10px; border-radius: 50%;"
       />
     </a>
-        <a class="navbar-item" href="/home">
+        <a class="navbar-item" href="/">
           <strong>Abone-Rol Sistemi Bot</strong>
 
           <!-- or if you want to use image -->
@@ -89,7 +89,7 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a href="/home" class="navbar-item is-tab">
+          <a href="/" class="navbar-item is-tab">
             Anasayfa
           </a>
 
