--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <div class="navbar-item">
             <div class="buttons">
-              <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.komutlar" class="button is-blurple">
+              <a href="/davet" class="button is-blurple">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
                   Botu Davet Et</strong
@@ -124,7 +124,7 @@
                 Botumuz özel olarak sadece youtube ve benzeri platformlarda abonelik karşılığı roller vermek isteyenler için yapılmıştır.
               </p>
               <div class="buttons">
-                <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.komutlar" class="button is-info">
+                <a href="/davet" class="button is-info">
                   <strong><i class="fa-solid fa-crown"></i> Botu Davet Et</strong>
                 </a>
 
