--- a/komutlar/index.html
+++ b/komutlar/index.html
@@ -116,7 +116,7 @@
                   Destek sunucusu</strong
                 >
               </a>
-              <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.komutlar" class="button is-blurple">
+              <a href="/davet" class="button is-blurple">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
                   Botu Davet Et</strong
@@ -174,7 +174,7 @@
           <p class="title has-text-weight-bold">
             <span class="blurple">Abone-Rol Sistem</span> botumuzu bu gün dene!
           </p>
-          <a href="https://discord.com/api/oauth2/authorize?client_id=1086392092294660176&permissions=8&scope=bot%20applications.komutlar" class="button is-blurple is-medium"
+          <a href="/davet" class="button is-blurple is-medium"
             ><strong><i class="fa-solid fa-book"></i> Botu ekle</strong></a
           >
         </div>
