--- a/davet/index.html
+++ b/davet/index.html
@@ -35,11 +35,14 @@
             border-radius: 10px;
             text-align: center;
         }
+        .centered-div h1 {
+            color : #fff ;
+        }
     </style>
 </head>
 <body>
     <div class="centered-div">
-        <h1>Hoş Geldiniz</h1>
+        <h1>YÖNLENDİRİLİYOR..</h1>
     </div>
 
 </body>
